mise a jour des validations pour qu'ils soit affichables si l'un d'eux n'est pas reussi
